--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -341,7 +341,7 @@ All the spectra in figures \ref{} are without any noise. When we add noise with 
 As you can see in figure \ref, it is hard to visually distinguish the NH3 and NO from the completed spectrum. However, cross-correlation is a technique that can be used to find those smaller signals. In the calculation of the cross-correlation, we used the average of the spectra of all the models in the model grid and normalize them. This template is then used to cross-correlate with the spectrum containing all the models. In figure \ref{}, you can see the cross-correlation of the H2O template with the entire spectrum. The peak signals that water is present in the spectrum. 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{cross-correlation.pdf}
+    \includegraphics[width=\linewidth]{Figures/CrosCorrelation.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
