Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -433,22 +433,42 @@ In GWLup CO, CO\2, H\2O, HCN, C\2H\2, and OH have been detected \citep{Grant_202
 
 Using the ranges in table \ref{}, we cross-correlated the templates with the measured spectra. The results of this are shown in table \ref{}
 
+\begin{table}[!ht]
+\begin{tabular}{llll}
+\hline
+\textbf{Specie} & \textbf{GWLup} & \textbf{Sz98} & \textbf{V1094Sco} \\ \hline
+C2H2            & Detection      & Non-detection & Detection         \\
+CH4             & Non-detection  & Non-detection & Non-detection     \\
+CO              & Detection      & Detection     & Detection         \\
+CO2             & Detection      & Detection     & Detection         \\
+H2O             & Detection      & Detection     & Detection         \\
+HCN             & Detection      & Detection     & Detection         \\
+NH3             & Non-detection  & Non-detection & Non-detection     \\
+NO              & Non-detection  & Non-detection & Non-detection     \\
+OH              & Detection      & Detection     & Detection         \\ \hline
+\end{tabular}
+\caption{}
+\label{tab:my-table}
+\end{table}
+
+
 We used 1D LTE models to fit CO and H\2O in the region 4.9-6.3 $\mu$m.
-\begin{figure}
+
+\begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{}
+    \includegraphics[width=\linewidth]{Figures/Fit_GWLup.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
-\begin{figure}
+\begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{}
+    \includegraphics[width=\linewidth]{Figures/Fit_Sz98.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
-\begin{figure}
+\begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{}
+    \includegraphics[width=\linewidth]{Figures/Fit_V1094Sco.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
